[package]
name = "process_reddit_zstd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
simd-json = "0.13.4"
zstd = "0.13.0"

[profile.release]
debug = true